Déploiement de MariaDB en utilisant un rôle existant sur Ansible Galaxy : https://galaxy.ansible.com/ui/standalone/roles/lukasic/mariadb/

--- a/README
+++ b/README
@@ -1,5 +1,8 @@
 Projet Ansible de déploiement d'une infrastructure web (http/php/mariadb).
 
+Nécessite le rôle lukasic.mariadb :
+                ansible-galaxy install --roles-path ./roles/ lukasic.mariadb
+
 Comment l'utiliser :
 
 - Etape 1 (facultative) : mise à jour d'Ansible
