--- a/README
+++ b/README
@@ -5,12 +5,15 @@ Nécessite un rôle Ansible Galaxy :
 
 Comment l'utiliser :
 
-- Etape 1 (facultative) : mise à jour d'Ansible
+- Etape 1 : Inventaire
+                Copier et compléter "inventory.example" en "inventory"
+
+- Etape 2 (facultative) : mise à jour d'Ansible
                 ansible-playbook playbook-controlnode.yml 
 
-- Etape 2 (à faire une seule fois) : déployer la clé publique SSH de Ansible 
+- Etape 3 (à faire une seule fois) : déployer la clé publique SSH de Ansible 
                 export ANSIBLE_HOST_KEY_CHECKING=False
                 ansible-playbook --ask-pass playbook-ssh.yml
 
-- Etape 3 : déploiement "principal" :
+- Etape 4 : déploiement "principal" :
                 ansible-playbook playbook-all.yml
